Fix editor styling of gallery spacing in Gutenberg 4.0rc1

--- a/style-editor.css
+++ b/style-editor.css
@@ -298,3 +298,10 @@ hr.wp-block-separator {
 	white-space: normal;
 	width: auto;
 }
+
+/* Galleries
+--------------------------------------------- */
+
+.gutenberg__editor .wp-block-gallery .blocks-gallery-item {
+	margin-bottom: 16px;
+}
